# textual-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN-optimization.md  README.md
crates/rich/: Cargo.toml
crates/tcss/: Cargo.toml
crates/textual/: Cargo.toml
crates/textual-macros/: Cargo.toml
crates/textual/benches/: README.md  canvas_benchmarks.rs  render_benchmarks.rs  segment_benchmarks.rs  strip_benchmarks.rs
crates/textual/src/: border_box.rs  border_chars.rs  border_render.rs  box_drawing.rs  canvas.rs  command.rs  containers.rs  content.rs  context.rs  error.rs  fraction.rs  fuzzy.rs  grapheme.rs  keyline_canvas.rs  lib.rs  log.rs  macros.rs  message.rs  render_cache.rs  scroll.rs  scrollbar.rs  segment.rs  strip.rs  style_resolver.rs  svg.rs  testing.rs  tree.rs  visual.rs  widget.rs
crates/textual/src/containers/: container.rs  grid.rs  horizontal.rs  horizontal_scroll.rs  item_grid.rs  scrollable.rs  vertical.rs  vertical_scroll.rs
crates/textual/src/layouts/: grid.rs  horizontal.rs  mod.rs  size_resolver.rs  vertical.rs
crates/textual/src/widget/: app_widget.rs  button.rs  command_palette.rs  header.rs  input.rs  label.rs  loading_indicator.rs  option_list.rs  placeholder.rs  ruler.rs  screen.rs  scrollbar.rs  scrollbar_corner.rs  static_widget.rs  switch.rs  tooltip.rs
crates/textual/tests/: examples_snapshot.rs  horizontal_layout.rs  horizontal_margin.rs  message_pump.rs  placeholder_padding.rs  pty_integration.rs  pty_tests.rs  query_api.rs  runtime_compat.rs  scroll_content_height.rs  scrollable_container.rs  snapshot_containers.rs  snapshot_label.rs  snapshot_static.rs  snapshot_switch.rs  vertical_id.rs  vertical_margin.rs  vertical_scroll_id.rs
crates/textual/tests/snapshots/: examples_snapshot__snapshot_align_all_example.snap  examples_snapshot__snapshot_align_example.snap  examples_snapshot__snapshot_background_example.snap  examples_snapshot__snapshot_background_example_ansi.snap  examples_snapshot__snapshot_background_example_svg.snap  examples_snapshot__snapshot_background_tint_example.snap  examples_snapshot__snapshot_background_transparency_example.snap  examples_snapshot__snapshot_border_all_example.snap  examples_snapshot__snapshot_border_example.snap  examples_snapshot__snapshot_border_example_ansi.snap  examples_snapshot__snapshot_border_example_svg.snap  examples_snapshot__snapshot_border_sub_title_align_all_example.snap  examples_snapshot__snapshot_border_sub_title_align_all_example.snap.new  examples_snapshot__snapshot_border_subtitle_align_example.snap  examples_snapshot__snapshot_border_title_align_example.snap  examples_snapshot__snapshot_border_title_colors_example.snap  examples_snapshot__snapshot_border_title_colors_example_ansi.snap  examples_snapshot__snapshot_border_title_colors_example_svg.snap  examples_snapshot__snapshot_box_sizing_example.snap  examples_snapshot__snapshot_color_auto_example.snap  examples_snapshot__snapshot_color_example.snap  examples_snapshot__snapshot_color_example_ansi.snap  examples_snapshot__snapshot_color_example_svg.snap  examples_snapshot__snapshot_column_span_example.snap  examples_snapshot__snapshot_content_align_all_example.snap  examples_snapshot__snapshot_content_align_example.snap  examples_snapshot__snapshot_display_example.snap  examples_snapshot__snapshot_dock_all_example.snap  examples_snapshot__snapshot_grid_columns_example.snap  examples_snapshot__snapshot_grid_example.snap  examples_snapshot__snapshot_grid_size_both_example.snap  examples_snapshot__snapshot_grid_size_columns_example.snap  examples_snapshot__snapshot_hatch_example.snap  examples_snapshot__snapshot_height_comparison_example.snap  examples_snapshot__snapshot_height_comparison_example_ansi.snap  examples_snapshot__snapshot_height_comparison_example_ansi.snap.new  examples_snapshot__snapshot_height_example.snap  examples_snapshot__snapshot_keyline_example.snap  examples_snapshot__snapshot_keyline_horizontal_example.snap  examples_snapshot__snapshot_layout_example.snap  (+61 more)
crates/textual/tests/support/: helpers.rs  pty_harness.rs
docs/: compare-python-rust.md
docs/perf/: optimization-analysis-claude.md  optimization-plan-codex.md
docs/plans/: fix-padding-tint.md  fraction-remainder-distribution.md  full-textual-rendering-parity.md  grid-row-column-span-support.md  stage-10-scrollbar.md  stage-7-message-pump.md  stage-8-reactive-attributes.md  stage-9-10-test-plan.md  stage-9-layout-foundations.md  static-widget-composition.md
examples/: align.rs  align_all.rs  api_fetch.rs  async_timer.rs  background.rs  background_tint.rs  background_tint.tcss  background_transparency.tcss  border.rs  border.tcss  border_all.rs  border_sub_title_align_all.rs  border_subtitle_align.tcss  border_title_align.rs  border_title_colors.rs  box_sizing.rs  box_sizing.tcss  breakpoints.rs  color.tcss  color_auto.rs  content_align.rs  content_align_all.rs  dock_all.tcss  grid.rs  grid_columns.rs  grid_size_both.rs  grid_size_columns.rs  height.tcss  height_comparison.tcss  layout.rs  layout.tcss  link_background.rs  link_background_hover.tcss  link_color.tcss  link_style.rs  link_style.tcss  link_style_hover.rs  link_style_hover.tcss  links.tcss  margin.rs  (+40 more)
examples/app/: event01.rs  question01.rs  question02.rs  question02.tcss  question03.rs  question_title01.rs
examples/styles/: align.rs  align.tcss  align_all.rs  align_all.tcss  background.rs  background.tcss  background_tint.rs  background_transparency.rs  border.rs  border_all.rs  border_all.tcss  border_sub_title_align_all.rs  border_sub_title_align_all.tcss  border_subtitle_align.rs  border_title_align.rs  border_title_align.tcss  border_title_colors.rs  box_sizing.rs  color.rs  color_auto.rs  column_span.rs  content_align.rs  content_align.tcss  content_align_all.rs  display.rs  display.tcss  dock_all.rs  grid.rs  grid.tcss  grid_columns.rs  grid_size_both.rs  grid_size_both.tcss  grid_size_columns.rs  grid_size_columns.tcss  hatch.rs  hatch.tcss  height.rs  (+67 more)
scripts/: compare-examples.sh
src/: canvas.rs  center.rs  containers.rs  events.rs  lib.rs  widget.rs
(+51 files in other folders)
