[package]
name = "textual-rs"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/tcss",
    "crates/textual", "crates/rich",
]

[dependencies]
textual = { path = "crates/textual" }
tcss = { path = "crates/tcss" }

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
license = "MIT"
repository = "https://github.com/fcoury/textual-rs"

[workspace.dependencies]
tcss = { path = "crates/tcss" }
textual = { path = "crates/textual" }

# Shared external dependencies
nom = "7.1"           # Suggested for the CSS parser
bitflags = "2.4"      # Useful for style modifiers (Bold, Italic, etc)
thiserror = "1.0"     # For clean error handling in both crates
log = { version = "0.4.29", features = ["std"] }  # For logging

# Async runtime and utilities (for message pump)
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
futures = "0.3"
crossterm = { version = "0.27", features = ["event-stream"] }

# Rendering pipeline
phf = { version = "0.11", features = ["macros"] }  # Static hash maps for border chars
once_cell = "1.19"                                  # Lazy static cache for border box
unicode-width = "0.2"                               # Cell width calculation

# Testing infrastructure
insta = { version = "1.39", features = ["yaml", "filters"] }
portable-pty = "0.8"
vt100 = "0.15"
rexpect = "0.6"

