[package]
name = "textual"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tcss.workspace = true
rich = { path = "../rich" }
log.workspace = true

thiserror.workspace = true
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true

# Rendering pipeline
phf.workspace = true
once_cell.workspace = true
unicode-width.workspace = true

[dev-dependencies]
# Enable test-util for deterministic virtual time testing
tokio = { version = "1.0", features = ["test-util"] }
