[package]
name = "textual"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
# Enable the testing module for integration tests
testing = []

[dependencies]
tcss.workspace = true
rich = { path = "../rich" }
log.workspace = true

thiserror.workspace = true
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true

# Rendering pipeline
phf.workspace = true
once_cell.workspace = true
unicode-width.workspace = true

[dev-dependencies]
# Enable test-util for deterministic virtual time testing
tokio = { version = "1.0", features = ["test-util"] }

# Testing infrastructure (merge of both branches)
insta = "1.40"
portable-pty = "0.8"
vt100 = "0.15"
rexpect.workspace = true

# Enable the testing feature for integration tests
textual = { path = ".", features = ["testing"] }
