[package]
name = "textual"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tcss.workspace = true
textual-macros = { path = "../textual-macros" }
rich = { path = "../rich" }
log.workspace = true

thiserror.workspace = true
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true

# Rendering pipeline
phf.workspace = true
once_cell.workspace = true
unicode-width.workspace = true
smallvec = "1.13"

[dev-dependencies]
# Enable test-util for deterministic virtual time testing
tokio = { version = "1.0", features = ["test-util"] }
insta = "1.40"
portable-pty = "0.8"
vt100 = "0.15"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "segment_benchmarks"
harness = false

[[bench]]
name = "strip_benchmarks"
harness = false

[[bench]]
name = "canvas_benchmarks"
harness = false

[[bench]]
name = "render_benchmarks"
harness = false
